--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -25,10 +25,10 @@
     "You'll continue to **predict how much it costs to rent an apartment in NYC,** using the dataset from renthop.com.\n",
     "\n",
     "- [x] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
-    "- [ ] Engineer at least two new features. (See below for explanation & ideas.)\n",
-    "- [ ] Fit a linear regression model with at least two features.\n",
-    "- [ ] Get the model's coefficients and intercept.\n",
-    "- [ ] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
+    "- [x] Engineer at least two new features. (See below for explanation & ideas.)\n",
+    "- [x] Fit a linear regression model with at least two features.\n",
+    "- [x] Get the model's coefficients and intercept.\n",
+    "- [x] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
     "- [ ] What's the best test MAE you can get? Share your score and features used with your cohort on Slack!\n",
     "- [ ] As always, commit your notebook to your fork of the GitHub repo.\n",
     "\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,16 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['cool_rooms'] = df[['bathrooms', 'bedrooms', 'dining_room', 'terrace', 'loft', 'garden_patio', 'outdoor_space', 'balcony']].apply(sum, axis=1)"
+    "df['cool_rooms'] = df[['bathrooms', 'bedrooms', 'dining_room',\n",
+    "                       'terrace', 'loft', 'garden_patio',\n",
+    "                       'outdoor_space', 'balcony']].apply(sum, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +220,7 @@
        " Name: cool_rooms, dtype: int64)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,345 +231,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bathrooms</th>\n",
-       "      <th>bedrooms</th>\n",
-       "      <th>created</th>\n",
-       "      <th>description</th>\n",
-       "      <th>display_address</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>price</th>\n",
-       "      <th>street_address</th>\n",
-       "      <th>interest_level</th>\n",
-       "      <th>elevator</th>\n",
-       "      <th>cats_allowed</th>\n",
-       "      <th>hardwood_floors</th>\n",
-       "      <th>dogs_allowed</th>\n",
-       "      <th>doorman</th>\n",
-       "      <th>dishwasher</th>\n",
-       "      <th>no_fee</th>\n",
-       "      <th>laundry_in_building</th>\n",
-       "      <th>fitness_center</th>\n",
-       "      <th>pre-war</th>\n",
-       "      <th>laundry_in_unit</th>\n",
-       "      <th>roof_deck</th>\n",
-       "      <th>outdoor_space</th>\n",
-       "      <th>dining_room</th>\n",
-       "      <th>high_speed_internet</th>\n",
-       "      <th>balcony</th>\n",
-       "      <th>swimming_pool</th>\n",
-       "      <th>new_construction</th>\n",
-       "      <th>terrace</th>\n",
-       "      <th>exclusive</th>\n",
-       "      <th>loft</th>\n",
-       "      <th>garden_patio</th>\n",
-       "      <th>wheelchair_access</th>\n",
-       "      <th>common_outdoor_space</th>\n",
-       "      <th>building_benefits</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2016-06-24 07:54:24</td>\n",
-       "      <td>A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...</td>\n",
-       "      <td>Metropolitan Avenue</td>\n",
-       "      <td>40.7145</td>\n",
-       "      <td>-73.9425</td>\n",
-       "      <td>3000</td>\n",
-       "      <td>792 Metropolitan Avenue</td>\n",
-       "      <td>medium</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2016-06-12 12:19:27</td>\n",
-       "      <td></td>\n",
-       "      <td>Columbus Avenue</td>\n",
-       "      <td>40.7947</td>\n",
-       "      <td>-73.9667</td>\n",
-       "      <td>5465</td>\n",
-       "      <td>808 Columbus Avenue</td>\n",
-       "      <td>low</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2016-04-17 03:26:41</td>\n",
-       "      <td>Top Top West Village location, beautiful Pre-w...</td>\n",
-       "      <td>W 13 Street</td>\n",
-       "      <td>40.7388</td>\n",
-       "      <td>-74.0018</td>\n",
-       "      <td>2850</td>\n",
-       "      <td>241 W 13 Street</td>\n",
-       "      <td>high</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2016-04-18 02:22:02</td>\n",
-       "      <td>Building Amenities - Garage - Garden - fitness...</td>\n",
-       "      <td>East 49th Street</td>\n",
-       "      <td>40.7539</td>\n",
-       "      <td>-73.9677</td>\n",
-       "      <td>3275</td>\n",
-       "      <td>333 East 49th Street</td>\n",
-       "      <td>low</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2016-04-28 01:32:41</td>\n",
-       "      <td>Beautifully renovated 3 bedroom flex 4 bedroom...</td>\n",
-       "      <td>West 143rd Street</td>\n",
-       "      <td>40.8241</td>\n",
-       "      <td>-73.9493</td>\n",
-       "      <td>3350</td>\n",
-       "      <td>500 West 143rd Street</td>\n",
-       "      <td>low</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   bathrooms  bedrooms             created  \\\n",
-       "0        1.5         3 2016-06-24 07:54:24   \n",
-       "1        1.0         2 2016-06-12 12:19:27   \n",
-       "2        1.0         1 2016-04-17 03:26:41   \n",
-       "3        1.0         1 2016-04-18 02:22:02   \n",
-       "4        1.0         4 2016-04-28 01:32:41   \n",
-       "\n",
-       "                                         description      display_address  \\\n",
-       "0  A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...  Metropolitan Avenue   \n",
-       "1                                                         Columbus Avenue   \n",
-       "2  Top Top West Village location, beautiful Pre-w...          W 13 Street   \n",
-       "3  Building Amenities - Garage - Garden - fitness...     East 49th Street   \n",
-       "4  Beautifully renovated 3 bedroom flex 4 bedroom...    West 143rd Street   \n",
-       "\n",
-       "   latitude  longitude  price           street_address interest_level  \\\n",
-       "0   40.7145   -73.9425   3000  792 Metropolitan Avenue         medium   \n",
-       "1   40.7947   -73.9667   5465      808 Columbus Avenue            low   \n",
-       "2   40.7388   -74.0018   2850          241 W 13 Street           high   \n",
-       "3   40.7539   -73.9677   3275     333 East 49th Street            low   \n",
-       "4   40.8241   -73.9493   3350    500 West 143rd Street            low   \n",
-       "\n",
-       "   elevator  cats_allowed  hardwood_floors  dogs_allowed  doorman  dishwasher  \\\n",
-       "0         0             0                0             0        0           0   \n",
-       "1         1             1                0             1        1           0   \n",
-       "2         0             0                1             0        0           1   \n",
-       "3         0             0                1             0        0           0   \n",
-       "4         0             0                0             0        0           0   \n",
-       "\n",
-       "   no_fee  laundry_in_building  fitness_center  pre-war  laundry_in_unit  \\\n",
-       "0       0                    0               0        0                0   \n",
-       "1       0                    0               1        0                0   \n",
-       "2       0                    1               0        0                0   \n",
-       "3       1                    0               0        0                0   \n",
-       "4       0                    0               0        1                0   \n",
-       "\n",
-       "   roof_deck  outdoor_space  dining_room  high_speed_internet  balcony  \\\n",
-       "0          0              0            0                    0        0   \n",
-       "1          0              0            0                    0        0   \n",
-       "2          0              0            0                    0        0   \n",
-       "3          0              0            0                    0        0   \n",
-       "4          0              0            0                    0        0   \n",
-       "\n",
-       "   swimming_pool  new_construction  terrace  exclusive  loft  garden_patio  \\\n",
-       "0              0                 0        0          0     0             0   \n",
-       "1              0                 0        0          0     0             0   \n",
-       "2              0                 0        0          0     0             0   \n",
-       "3              0                 0        0          0     0             0   \n",
-       "4              0                 0        0          0     0             0   \n",
-       "\n",
-       "   wheelchair_access  common_outdoor_space  building_benefits  \n",
-       "0                  0                     0                  0  \n",
-       "1                  0                     0                  2  \n",
-       "2                  0                     0                  1  \n",
-       "3                  0                     0                  0  \n",
-       "4                  0                     0                  0  "
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "train = df[df.created.apply(getattr, args=['month']) < 6]\n",
     "test  = df[df.created.apply(getattr, args=['month']) > 5]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['building_benefits', 'cool_rooms']\n",
+    "target = 'price'\n",
+    "X_train = train[features]\n",
+    "y_train = train[target]\n",
+    "X_test = test[features]\n",
+    "y_test = test[target]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4198.21284373, 3568.31049025, 2774.05587018, ..., 2774.05587018,\n",
+       "       3343.7186596 , 3456.01457492])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(X_test)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([112.29591532, 569.66278942])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1634.7302913292515"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1862519.256353486"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "906.3228688885696"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_absolute_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4007379307155243"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
