--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -30,7 +30,7 @@
     "- [x] Get the model's coefficients and intercept.\n",
     "- [x] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
     "- [ ] What's the best test MAE you can get? Share your score and features used with your cohort on Slack!\n",
-    "- [ ] As always, commit your notebook to your fork of the GitHub repo.\n",
+    "- [x] As always, commit your notebook to your fork of the GitHub repo.\n",
     "\n",
     "\n",
     "#### [Feature Engineering](https://en.wikipedia.org/wiki/Feature_engineering)\n",
