--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -109,11 +109,11 @@
       "metadata": {
         "id": "B3Z1YYY4Y9MJ",
         "colab_type": "code",
+        "outputId": "9689d884-40cf-42d0-ccc3-43d0b1044718",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 212
-        },
-        "outputId": "9689d884-40cf-42d0-ccc3-43d0b1044718"
+        }
       },
       "source": [
         "!pip install category_encoders\n",
@@ -125,7 +125,7 @@
         "from sklearn.feature_selection import SelectKBest, f_regression\n",
         "import numpy as np"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
         "\n",
         "train.loc[~train['ZIP_CODE'].isin(zip10), 'ZIP_CODE'] = 'OTHER'"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
         "#test['BOROUGH'] = test['BOROUGH'].astype(int)\n",
         "test['LAND_SQUARE_FEET'] = test['LAND_SQUARE_FEET'].str.replace(',', '').astype(int)"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
         "for name in selected_names:\n",
         "    print(name)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,7 +558,7 @@
         "\n",
         "RidgeRegression()"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -646,11 +646,11 @@
       "metadata": {
         "id": "8UsT9uiJ12fY",
         "colab_type": "code",
+        "outputId": "dce9ec44-f5f0-4751-ca93-de6422bc23e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "432b57ed-dc55-48dc-da88-a16bab544321"
+        }
       },
       "source": [
         "def RidgeCVRegression(X_train=X_train, y_train=y_train, \n",
@@ -658,6 +658,8 @@
         "                    mae_ref=2000000):\n",
         "  \n",
         "  with np.errstate(divide='ignore',invalid='ignore'):\n",
+        "\n",
+        "    mae_list = []\n",
         "\n",
         "    for k in range(1, len(X_train.columns)+1):\n",
         "      try:\n",
@@ -678,10 +680,12 @@
         "          if mae < mae_ref:\n",
         "            mae_ref = mae\n",
         "            final_k = k\n",
+        "            mae_list.append(mae)\n",
         "        finally: \n",
         "          if k == len(X_train.columns):\n",
-        "            print(f'{final_k} Features')\n",
+        "            print(f'{final_k} Features\\n')\n",
         "            print(f'Mean Absolute Error: ${mae_ref:,.2f}\\n')\n",
+        "            print(f'Mean MAE: ${np.mean(mae_list):,.2f}\\n')\n",
         "\n",
         "            selected_mask = selector.get_support()\n",
         "            all_names = X_train.columns\n",
@@ -695,13 +699,16 @@
         "\n",
         "RidgeCVRegression()"
       ],
-      "execution_count": 31,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "55 Features\n",
+            "\n",
             "Mean Absolute Error: $152,362.78\n",
+            "\n",
+            "Mean MAE: $160,752.86\n",
             "\n",
             "Features selected:\n",
             "BOROUGH_3\n",
