Will SN Assignment 2/12/20

--- a/Copy_of_LS_DS_213_assignment.ipynb
+++ b/Copy_of_LS_DS_213_assignment.ipynb
@@ -3978,6 +3978,267 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0b-Ttk1KIkNp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 456
+        },
+        "outputId": "1475d778-d0b7-47b2-8826-d8b30be8cda9"
+      },
+      "source": [
+        "##Try with just my 10 best features selected\n",
+        "selected_names\n",
+        "hot_encoded_X_train_dropped[selected_names]"
+      ],
+      "execution_count": 269,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>BOROUGH_3</th>\n",
+              "      <th>BOROUGH_2</th>\n",
+              "      <th>BOROUGH_5</th>\n",
+              "      <th>NEIGHBORHOOD_OTHER</th>\n",
+              "      <th>NEIGHBORHOOD_FLUSHING-NORTH</th>\n",
+              "      <th>NEIGHBORHOOD_FOREST HILLS</th>\n",
+              "      <th>BLOCK</th>\n",
+              "      <th>ZIP_CODE</th>\n",
+              "      <th>TOTAL_UNITS</th>\n",
+              "      <th>GROSS_SQUARE_FEET</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>44</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5495</td>\n",
+              "      <td>11230.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1325.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>61</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7918</td>\n",
+              "      <td>11427.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2001.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>78</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4210</td>\n",
+              "      <td>10461.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2043.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>108</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5212</td>\n",
+              "      <td>11226.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2680.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>111</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7930</td>\n",
+              "      <td>11203.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1872.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18129</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4081</td>\n",
+              "      <td>10306.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>921.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18130</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2373</td>\n",
+              "      <td>10314.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2128.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18132</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1132</td>\n",
+              "      <td>10302.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1807.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18134</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3395</td>\n",
+              "      <td>10305.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>621.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>18147</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>11159</td>\n",
+              "      <td>11429.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1163.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2507 rows × 10 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       BOROUGH_3  BOROUGH_2  ...  TOTAL_UNITS  GROSS_SQUARE_FEET\n",
+              "44             1          0  ...          1.0             1325.0\n",
+              "61             0          0  ...          1.0             2001.0\n",
+              "78             0          1  ...          1.0             2043.0\n",
+              "108            1          0  ...          1.0             2680.0\n",
+              "111            1          0  ...          1.0             1872.0\n",
+              "...          ...        ...  ...          ...                ...\n",
+              "18129          0          0  ...          1.0              921.0\n",
+              "18130          0          0  ...          1.0             2128.0\n",
+              "18132          0          0  ...          1.0             1807.0\n",
+              "18134          0          0  ...          1.0              621.0\n",
+              "18147          0          0  ...          1.0             1163.0\n",
+              "\n",
+              "[2507 rows x 10 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 269
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0Awn3KbqI6Wp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "08df4350-44f8-42d0-dcad-0c1e5497a861"
+      },
+      "source": [
+        "model = Ridge(alpha = 1, normalize=True)\n",
+        "model.fit(hot_encoded_X_train_dropped[selected_names], y_train)\n",
+        "y_predicted = model.predict(hot_encoded_X_test_dropped[selected_names])\n",
+        "mae = mean_absolute_error(y_test, y_predicted)\n",
+        "mae\n",
+        "\n",
+        "###It's actually worse with just the 10 best features."
+      ],
+      "execution_count": 271,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "177110.25549549764"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 271
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "RPrn4Wl-U0-0",
