--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -991,6 +991,16 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cY78sJPw9BMj",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is NOT a good result. I suspect I am doing something wrong."
+      ]
     }
   ]
 }
