--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -264,7 +264,7 @@
         "colab": {}
       },
       "source": [
-        "df = df.replace([np.NaN, 'No', 'x', 'X', 'Yes'], [0, 0, 1, 1, 1])"
+        "df = df.replace([np.NaN, 'No', 'x', 'X', 'Yes', 2026], [0, 0, 1, 1, 1, 2016])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -338,7 +338,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "7f2298ea-71e3-4c96-d63b-0caedd652171"
+        "outputId": "42301573-c928-4745-fcfd-9eb1d056b3f7"
       },
       "source": [
         "majority_class = y_train.mode()[0]\n",
@@ -352,7 +352,7 @@
         "y_pred = [majority_class] * len(y_test)\n",
         "print(f'Test Baseline Accuracy: {accuracy_score(y_test, y_pred)}')"
       ],
-      "execution_count": 141,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "stream",
@@ -409,12 +409,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 408
         },
-        "outputId": "9bcacf4e-0342-4e4e-c09f-c1e49b5f4c16"
+        "outputId": "94a2f2dc-8d75-4f27-b448-b34284ccefcf"
       },
       "source": [
         "pipe.fit(X_train, y_train)"
       ],
-      "execution_count": 13,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +454,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 159
         }
       ]
     },
@@ -467,13 +467,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "f1650d37-8b0e-46e4-d8e0-d395710d7b4a"
+        "outputId": "81fae6d5-f747-400c-a3d2-437a1a5eeedf"
       },
       "source": [
         "y_pred = pipe.predict(X_validate)\n",
         "f1_score(y_validate, y_pred)"
       ],
-      "execution_count": 14,
+      "execution_count": 160,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,7 +485,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 160
         }
       ]
     },
@@ -530,6 +530,7 @@
         "            f1_ref = f1\n",
         "            final_k = k\n",
         "            acc_ref = accuracy\n",
+        "            coeff = pipe.named_steps.logisticregression.coef_\n",
         "        finally: \n",
         "          if k == len(X_train.columns):\n",
         "            print(f'{final_k} Features Used\\n')\n",
@@ -557,12 +558,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "3c156354-b747-4626-be7c-d6a21eb002e5"
+        "outputId": "2887eb2d-3d10-411a-e63e-ee766f7028fb"
       },
       "source": [
         "LogRegression()"
       ],
-      "execution_count": 68,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,12 +596,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "8cc4c7fc-1eb0-4c47-b9d3-845d4613d6be"
+        "outputId": "f6975d1d-002f-4c32-de5e-35b64f1b7eab"
       },
       "source": [
         "LogRegression(X_test=X_test, y_test=y_test)"
       ],
-      "execution_count": 69,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,7 +622,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Logisitc Regression CV\n"
+        "## Logistic Regression CV -- Definitely did this wrong, woops\n"
       ]
     },
     {
@@ -687,12 +688,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "12285f64-f9e7-409c-c4f3-a682a24f3702"
+        "outputId": "c46e786e-03bf-47e8-bb84-45375f389f0a"
       },
       "source": [
         "LogCVRegression()"
       ],
-      "execution_count": 72,
+      "execution_count": 165,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,12 +728,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "c0d9b4e4-365d-4512-dcba-285746d9c4d5"
+        "outputId": "bf9812fa-baed-46f9-f574-4efe529ab171"
       },
       "source": [
         "LogCVRegression(X_test=X_test, y_test=y_test)"
       ],
-      "execution_count": 73,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "stream",
